<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="students.jimmy.firebasepractice.loginscene.LoginViewModel" />
        <import type="android.view.View"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/edittext_login_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/edittext_login_useremail"
            app:layout_constraintStart_toStartOf="@id/edittext_login_useremail"
            app:layout_constraintEnd_toEndOf="@id/edittext_login_useremail"
            android:hint="@string/hint_user_name"
            android:layout_marginBottom="20dp"
            android:text="@={viewmodel.name}"
            android:inputType="textPersonName"/>

        <EditText
            android:id="@+id/edittext_login_useremail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="0.7"
            android:hint="@string/hint_email"
            app:layout_constraintVertical_bias="0.4"
            android:text="@={viewmodel.email}"
            android:inputType="textEmailAddress"
            />

        <EditText
            android:id="@+id/edittext_login_userpassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/edittext_login_useremail"
            app:layout_constraintEnd_toEndOf="@id/edittext_login_useremail"
            app:layout_constraintTop_toBottomOf="@id/edittext_login_useremail"
            android:layout_marginTop="20dp"
            android:hint="@string/hint_password"
            android:text="@={viewmodel.password}"
            android:inputType="textPassword"/>

        <TextView
            android:id="@+id/textview_login_errorhint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textColor="@android:color/holo_red_light"
            android:text="@{viewmodel.errorMessage}"
            tools:text="@string/hint_login_error"
            app:layout_constraintTop_toBottomOf="@id/edittext_login_userpassword"
            app:layout_constraintStart_toStartOf="@id/edittext_login_userpassword"
            app:layout_constraintEnd_toEndOf="@id/edittext_login_userpassword"
            android:visibility='@{viewmodel.errorMessage == null || viewmodel.errorMessage == "" ? View.GONE : View.VISIBLE}'
            />

        <LinearLayout
            android:id="@+id/layout_login_buttons"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/textview_login_errorhint"
            app:layout_constraintStart_toStartOf="@id/edittext_login_username"
            app:layout_constraintEnd_toEndOf="@id/edittext_login_username"
            android:layout_marginTop="20dp">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/register_text"
                android:onClick="@{()->viewmodel.signUp()}"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>